--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@expo/samples": "~36.0.0",
     "@expo/vector-icons": "^10.0.6",
     "@react-navigation/web": "~1.0.0-alpha.9",
+    "axios": "^0.19.0",
     "expo": "~36.0.0",
     "expo-asset": "~8.0.0",
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-web-browser": "~8.0.0",
+    "moment-timezone": "^0.5.27",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-modal-datetime-picker": "^7.6.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-svg": "9.13.3",
