--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-calendar-picker": "^6.0.3",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-modal-datetime-picker": "^7.6.1",
+    "react-native-picker-select": "^6.3.3",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-svg": "9.13.3",
